[gd_scene load_steps=21 format=3 uid="uid://yyty7iutk84o"]

[ext_resource type="Script" path="res://DialogueUI.gd" id="1_4sc00"]
[ext_resource type="StyleBox" uid="uid://cdhoistp1ue8p" path="res://backgroundpanel.tres" id="2_4334r"]
[ext_resource type="Texture2D" uid="uid://bvflaupf21hnu" path="res://sprites/stickman-happy.png" id="2_nqrov"]
[ext_resource type="Texture2D" uid="uid://dmdsr320tvfcy" path="res://sprites/frame1.png" id="2_voja3"]
[ext_resource type="Script" path="res://DebugMenu.gd" id="3_0rjqr"]
[ext_resource type="FontFile" uid="uid://gjsrfpct15jo" path="res://sprites/NotoSans-VariableFont_wdth,wght.ttf" id="3_u1302"]
[ext_resource type="Texture2D" uid="uid://dcorpyh008f1w" path="res://sprites/frame2.png" id="4_3pecj"]
[ext_resource type="Texture2D" uid="uid://bp8o5wvqhandk" path="res://sprites/arrow.png" id="4_30c8d"]
[ext_resource type="Texture2D" uid="uid://bg2h1d4awhbow" path="res://sprites/frame4.png" id="5_hk70a"]
[ext_resource type="Texture2D" uid="uid://bn5ulqkjbx1f8" path="res://sprites/frame5.png" id="6_ls3co"]
[ext_resource type="Texture2D" uid="uid://cne8dutpuqrme" path="res://sprites/frame3.png" id="7_v6hbh"]
[ext_resource type="Texture2D" uid="uid://c4dq3bpre8kfo" path="res://sprites/frame6.png" id="7_vsck7"]
[ext_resource type="Script" path="res://PopupDialog.gd" id="13_smeqf"]
[ext_resource type="Texture2D" uid="uid://eyaltk1e1lh2" path="res://sprites/pop-up-9-slice.png" id="14_r0h41"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcacp"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.776471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3o2s8"]
bg_color = Color(0.211765, 0.211765, 0.211765, 0.623529)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="Animation" id="Animation_esfoj"]
resource_name = "Blink"
length = 1.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueScene/TextBox/TextBoxPortrait:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_voja3"), ExtResource("4_3pecj"), ExtResource("7_v6hbh"), ExtResource("5_hk70a"), ExtResource("6_ls3co"), ExtResource("5_hk70a"), ExtResource("7_v6hbh"), ExtResource("4_3pecj"), ExtResource("2_voja3")]
}

[sub_resource type="Animation" id="Animation_j1h7l"]
resource_name = "Talk"
length = 1.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueScene/TextBox/TextBoxPortrait:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_voja3"), ExtResource("7_vsck7"), ExtResource("2_voja3"), ExtResource("7_vsck7"), ExtResource("2_voja3"), ExtResource("7_vsck7"), ExtResource("2_voja3")]
}

[sub_resource type="Animation" id="Animation_3vjlm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueScene/TextBox/TextBoxPortrait:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_voja3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b30h1"]
_data = {
"Placeholder_Blink": SubResource("Animation_esfoj"),
"Placeholder_Talk": SubResource("Animation_j1h7l"),
"RESET": SubResource("Animation_3vjlm")
}

[node name="DialogueSystem" type="CanvasLayer"]

[node name="DialogueScene" type="Control" parent="." groups=["DialogueBox"]]
unique_name_in_owner = true
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sc00")

[node name="VNChoice" type="Control" parent="DialogueScene"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RPGChoice" type="Control" parent="DialogueScene"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChoiceBoxBackground" type="Panel" parent="DialogueScene/RPGChoice"]
layout_mode = 0
offset_left = 890.0
offset_top = 360.0
offset_right = 1065.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("2_4334r")

[node name="ChoiceNodes" type="Control" parent="DialogueScene/RPGChoice"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SelectionArrow" type="TextureRect" parent="DialogueScene/RPGChoice"]
layout_mode = 0
offset_left = 900.0
offset_top = 368.0
offset_right = 925.0
offset_bottom = 393.0
texture = ExtResource("4_30c8d")

[node name="VNCharacterArea" type="Control" parent="DialogueScene"]
visible = false
anchors_preset = 0
offset_left = 76.0
offset_top = 99.0
offset_right = 1076.0
offset_bottom = 139.0
scale = Vector2(1, 8.04)

[node name="Character1" type="TextureRect" parent="DialogueScene/VNCharacterArea"]
layout_mode = 0
offset_left = 780.0
offset_top = 5.0
offset_right = 830.0
offset_bottom = 55.0
scale = Vector2(3.401, 1)
texture = ExtResource("2_nqrov")
expand_mode = 1

[node name="TextBox" type="Control" parent="DialogueScene"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextBoxBackgroundPanel" type="Panel" parent="DialogueScene/TextBox"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 76.0
offset_top = 420.0
offset_right = 1076.0
offset_bottom = 595.0
theme_override_styles/panel = ExtResource("2_4334r")

[node name="TextBoxPortrait" type="TextureRect" parent="DialogueScene/TextBox"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 100.0
offset_top = 443.5
offset_right = 228.0
offset_bottom = 571.5
texture = ExtResource("2_voja3")
expand_mode = 2

[node name="TextBoxForegroundPanel" type="Panel" parent="DialogueScene/TextBox"]
layout_mode = 1
anchors_preset = -1
offset_left = 251.0
offset_top = 440.0
offset_right = 1061.0
offset_bottom = 575.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qcacp")

[node name="TextBoxText" type="RichTextLabel" parent="DialogueScene/TextBox"]
clip_contents = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = -1
offset_left = 256.0
offset_top = 443.0
offset_right = 1056.0
offset_bottom = 563.0
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("3_u1302")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu"
scroll_active = false
tab_size = 0
shortcut_keys_enabled = false

[node name="TextBoxNamePanel" type="Panel" parent="DialogueScene/TextBox"]
layout_mode = 1
anchors_preset = -1
offset_left = 100.0
offset_top = 396.0
offset_right = 250.0
offset_bottom = 421.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3o2s8")

[node name="TextBoxNameText" type="Label" parent="DialogueScene/TextBox"]
layout_mode = 0
offset_left = 112.5
offset_top = 397.0
offset_right = 237.5
offset_bottom = 420.0
text = "Placeholder"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueScene"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_b30h1")
}

[node name="DebugMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_0rjqr")

[node name="FPSCounter" type="Label" parent="DebugMenu"]
layout_mode = 0
offset_left = 52.0
offset_top = 68.0
offset_right = 92.0
offset_bottom = 91.0

[node name="PopupDialog" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_smeqf")

[node name="NinePatchRect" type="NinePatchRect" parent="PopupDialog"]
offset_right = 10.0
offset_bottom = 10.0
scale = Vector2(4, 4)
texture = ExtResource("14_r0h41")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="PopupText" type="Label" parent="PopupDialog"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="DialogueScene" to="DialogueScene" method="_on_visibility_changed"]
[connection signal="meta_clicked" from="DialogueScene/TextBox/TextBoxText" to="DialogueScene" method="_on_dialogue_text_meta_clicked"]
[connection signal="animation_finished" from="DialogueScene/AnimationPlayer" to="DialogueScene" method="_on_animation_player_animation_finished"]
